--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <h2>Persona</h2>
     <div>
-        <img src="assets/Persona 2 - Léa.png" alt="persona">
+        <img src="assets/Persona 2 - Léa (2).png" alt="persona">
     </div>
 
     <!-- Problematique -->
@@ -198,6 +198,8 @@
         Livraison à domicile
         Vente de produits à différents transformateurs (ex: restaurants, collectivités locales, associations… )
     </p>
+
+    <img src="" alt="photo">
 
     <footer>
         <div class="footer-container container">
